unpackaged/main/default/objects/Order/fields/TechContractDocusign__c.field-meta.xml
<CustomField>
    <fullName>TechContractDocusign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TechContractDocusign</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Commande Contractuelle</relationshipLabel>
    <relationshipName>TechOrderDocusign</relationshipName>
    <type>Lookup</type>
</CustomField>