unpackaged/main/default/objects/Order/fields/Temperature_Order__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Order__c</fullName>
    <label>Température</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>