unpackaged/main/default/objects/Order/fields/Terminated_Contract__c.field-meta.xml
<CustomField>
    <fullName>Terminated_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat Résilié</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Commande d&#39;indemnité</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>