unpackaged/main/default/objects/Order/fields/Transport_et_manutention__c.field-meta.xml
<CustomField>
    <fullName>Transport_et_manutention__c</fullName>
    <label>Transport et Manutention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Organisé par nos soins</fullName>
            </value>
            <value>
                <fullName>Organisé par le client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>