unpackaged/main/default/objects/Order/fields/Type_de_location__c.field-meta.xml
<CustomField>
    <fullName>Type_de_location__c</fullName>
    <formula>TEXT(SBQQ__Quote__r.Type_de_location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de location</label>
    <type>Text</type>
</CustomField>