unpackaged/main/default/objects/Order/fields/Type_de_produit__c.field-meta.xml
<CustomField>
    <fullName>Type_de_produit__c</fullName>
    <formula>TEXT(Opportunity.TypeProduits__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de produit</label>
    <type>Text</type>
</CustomField>