unpackaged/main/default/objects/Order/fields/Type_de_produit_icon__c.field-meta.xml
<CustomField>
    <fullName>Type_de_produit_icon__c</fullName>
    <formula>Opportunity.Type_de_produit_Icon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de produit</label>
    <type>Text</type>
</CustomField>