unpackaged/main/default/objects/Order/fields/Validation_Caution__c.field-meta.xml
<CustomField>
    <fullName>Validation_Caution__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Validation de la Caution/DG et BDC</inlineHelpText>
    <label>Validation Financière</label>
    <type>Checkbox</type>
</CustomField>