unpackaged/main/default/objects/Order/fields/Validation_Technique__c.field-meta.xml
<CustomField>
    <fullName>Validation_Technique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Contractuelle</label>
    <type>Checkbox</type>
</CustomField>