unpackaged/main/default/objects/Order/recordTypes/Commande_fournisseur.recordType-meta.xml
<RecordType>
    <fullName>Commande_fournisseur</fullName>
    <active>true</active>
    <description>Commande chez le fournisseur</description>
    <label>Commande fournisseur</label>
</RecordType>