unpackaged/main/default/objects/Order/recordTypes/Manual_Order.recordType-meta.xml
<RecordType>
    <fullName>Manual_Order</fullName>
    <active>true</active>
    <description>Manual Order for Standalone Orders</description>
    <label>Manual Order</label>
</RecordType>