unpackaged/main/default/objects/Order/recordTypes/Order_Client.recordType-meta.xml
<RecordType>
    <fullName>Order_Client</fullName>
    <active>true</active>
    <description>Container - Order client</description>
    <label>Order Client</label>
</RecordType>