unpackaged/main/default/objects/Order/validationRules/Order_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Start_Date</fullName>
    <active>false</active>
    <description>Effective Order Start Date (standard field) must be equal as the custom field Start Date</description>
    <errorConditionFormula>StartDate__c  &lt;&gt;  EffectiveDate</errorConditionFormula>
    <errorDisplayField>EffectiveDate</errorDisplayField>
    <errorMessage>La date doit être identique au champ &quot;Start Date&quot;</errorMessage>
</ValidationRule>