unpackaged/main/default/objects/Order/validationRules/VR_Order_Auvent.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Order_Auvent</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Auvent__c, &quot;Oui&quot;)  &amp;&amp;  
	ISBLANK( Auvent_Information_complementaires__c)</errorConditionFormula>
    <errorMessage>Merci de préciser la hauteur du auvent</errorMessage>
</ValidationRule>