unpackaged/main/default/objects/Order/listViews/Affected_Fleet_Numbers.listView-meta.xml
<ListView>
    <fullName>Affected_Fleet_Numbers</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Dnp_Date_d_approbation__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Origine_du_produit__c</columns>
    <columns>N_Parc__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Pays_Region_PF__c</columns>
    <columns>Agence_PF__c</columns>
    <columns>Statut_de_l_opportunit__c</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Commande_fournisseur</value>
    </filters>
    <filters>
        <field>N_Parc__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Dnp_Statut__c</field>
        <operation>equals</operation>
        <value>Approuvée</value>
    </filters>
    <filters>
        <field>Pays_Region_PF__c</field>
        <operation>equals</operation>
        <value>PFUK,PIRL</value>
    </filters>
    <label>Affected Fleet Numbers</label>
    <sharedTo>
        <role>DirectionPays_PFUK_Grande_Bretagne</role>
    </sharedTo>
</ListView>