unpackaged/main/default/objects/Order/listViews/AllActivatedOrders.listView-meta.xml
<ListView>
    <fullName>AllActivatedOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pays_Region_PF__c</field>
        <operation>equals</operation>
        <value>PIES</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>contains</operation>
        <value>alcaniz</value>
    </filters>
    <label>Todos los pedidos activados</label>
</ListView>