unpackaged/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <columns>N_Parc__c</columns>
    <columns>Pays_Region_PF__c</columns>
    <columns>Agence_PF__c</columns>
    <columns>ORDER.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les commandes</label>
</ListView>