unpackaged/main/default/objects/Order/listViews/Commande_s_En_cours_Flux_Amonts.listView-meta.xml
<ListView>
    <fullName>Commande_s_En_cours_Flux_Amonts</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.NAME</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>N_Parc__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Pays_Region_PF__c</columns>
    <columns>Agence_PF__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>En cours Flux Amonts</value>
    </filters>
    <label>Commande(s) - En cours Flux Amonts</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>