unpackaged/main/default/objects/Order/listViews/Commandes_client_Containers.listView-meta.xml
<ListView>
    <fullName>Commandes_client_Containers</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Type_de_location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Order_Client</value>
    </filters>
    <label>Containers - Commandes client</label>
</ListView>