unpackaged/main/default/objects/Order/listViews/Commandes_Confirmees.listView-meta.xml
<ListView>
    <fullName>Commandes_Confirmees</fullName>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.TYPE</columns>
    <columns>Icon_commande__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Commande à Traiter</value>
    </filters>
    <label>Container - Commande à traiter</label>
</ListView>