unpackaged/main/default/objects/Order/listViews/Container_Commande_facturer.listView-meta.xml
<ListView>
    <fullName>Container_Commande_facturer</fullName>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.TYPE</columns>
    <columns>Icon_commande__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Commande à facturer</value>
    </filters>
    <label>Container - Commande à facturer</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>