unpackaged/main/default/objects/Order/listViews/Contrat_sign.listView-meta.xml
<ListView>
    <fullName>Contrat_sign</fullName>
    <booleanFilter>(1 AND 2 AND (3 OR 4) AND 5 AND 6 AND 7 and 10) OR (1 AND 2 AND 5 AND 6 AND 7 AND 8 AND 9 and 10)</booleanFilter>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Dnp_Date_d_approbation__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Origine_du_produit__c</columns>
    <columns>N_Parc__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <columns>Pays_Region_PF__c</columns>
    <columns>Agence_PF__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Commande_fournisseur</value>
    </filters>
    <filters>
        <field>N_Parc__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Origine_du_produit__c</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <filters>
        <field>Origine_du_produit__c</field>
        <operation>equals</operation>
        <value>B</value>
    </filters>
    <filters>
        <field>Dnp_Statut__c</field>
        <operation>equals</operation>
        <value>Approuvée</value>
    </filters>
    <filters>
        <field>Statut_de_l_opportunit__c</field>
        <operation>equals</operation>
        <value>6 - Contrat signé</value>
    </filters>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Confirmée,En cours Flux Amonts,Confirmé,Commande à Traiter</value>
    </filters>
    <filters>
        <field>Origine_du_produit__c</field>
        <operation>equals</operation>
        <value>F</value>
    </filters>
    <filters>
        <field>SALES.ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>PETIT FORESTIER</value>
    </filters>
    <filters>
        <field>Pays_Region_PF__c</field>
        <operation>notEqual</operation>
        <value>PIPL,PFUK</value>
    </filters>
    <label>4 - Contrat(s) signé(s)</label>
    <sharedTo>
        <role>AG_Flux_Amont</role>
        <role>DirectionGenerale</role>
        <roleAndSubordinatesInternal>DirectionPays_PFUK_Grande_Bretagne</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>