unpackaged/main/default/objects/Order/listViews/Copie_de_Contrat_sign.listView-meta.xml
<ListView>
    <fullName>Copie_de_Contrat_sign</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.NAME</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Type_de_produit__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Pays_Region_PF__c</columns>
    <columns>Agence_PF__c</columns>
    <columns>N_Parc__c</columns>
    <columns>Date_de_livraison_chassis__c</columns>
    <columns>Date_de_livraison_vehicule__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>En cours Lecapitaine</value>
    </filters>
    <filters>
        <field>SALES.ACCOUNT.NAME</field>
        <operation>contains</operation>
    </filters>
    <label>5 - Commande(s) - En cours Lecapitaine</label>
    <sharedTo>
        <role>AG_Flux_Amont</role>
        <role>DirectionGenerale</role>
    </sharedTo>
</ListView>