unpackaged/main/default/objects/Order/listViews/En_attente_de_signature.listView-meta.xml
<ListView>
    <fullName>En_attente_de_signature</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Dnp_Date_d_approbation__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>N_Parc__c</columns>
    <columns>Origine_du_produit__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Pays_Region_PF__c</columns>
    <columns>Agence_PF__c</columns>
    <columns>Statut_de_l_opportunit__c</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>10/19/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Commande_fournisseur</value>
    </filters>
    <filters>
        <field>N_Parc__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Dnp_Statut__c</field>
        <operation>equals</operation>
        <value>Approuvée</value>
    </filters>
    <filters>
        <field>Statut_de_l_opportunit__c</field>
        <operation>contains</operation>
        <value>5</value>
    </filters>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Confirmé</value>
    </filters>
    <label>En attente de signature</label>
</ListView>