unpackaged/main/default/objects/Order/listViews/N_Parc_attribu.listView-meta.xml
<ListView>
    <fullName>N_Parc_attribu</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Dnp_Date_d_approbation__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Origine_du_produit__c</columns>
    <columns>N_Parc__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Pays_Region_PF__c</columns>
    <columns>Agence_PF__c</columns>
    <columns>Statut_de_l_opportunit__c</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Commande_fournisseur</value>
    </filters>
    <filters>
        <field>N_Parc__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Dnp_Statut__c</field>
        <operation>equals</operation>
        <value>Approuvée</value>
    </filters>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>notEqual</operation>
        <value>Créée,Confirmée,En cours Flux Amonts,En cours Lecapitaine,Traitée,Confirmé,Validations Internes,Commande à Traiter,Commande traitée,Commande à facturer,Commande facturée</value>
    </filters>
    <label>3 - N° Parcs attribué(s)</label>
    <sharedTo>
        <role>AG_Flux_Amont</role>
        <role>DirectionGenerale</role>
        <roleAndSubordinatesInternal>DirecteurCommercialPaysPIPLPologne</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>DirectionPays_PFUK_Grande_Bretagne</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>