unpackaged/main/default/objects/Order/listViews/N_Parcs_attribu_s_tarif.listView-meta.xml
<ListView>
    <fullName>N_Parcs_attribu_s_tarif</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Dnp_Date_d_approbation__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Origine_du_produit__c</columns>
    <columns>N_Parc__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Pays_Region_PF__c</columns>
    <columns>Agence_PF__c</columns>
    <columns>Statut_de_l_opportunit__c</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Commande_fournisseur,Order.Manual_Order,Order.Order_Client</value>
    </filters>
    <filters>
        <field>N_Parc__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Dnp_Statut__c</field>
        <operation>equals</operation>
        <value>Approuvée</value>
    </filters>
    <filters>
        <field>SALES.ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>VIVA AQUA SERVICE SPAIN S.A</value>
    </filters>
    <label>N° Parcs attribué(s) (VIVA AQUA SERVICE)</label>
</ListView>